# green-roofs-walls

./: .gitignore  README.md  main.py  requirements.txt  utils.py
green_potential/: .pre-commit-config.yaml  README.md  requirements.txt
green_potential/src/green_potential/: __init__.py  exceptions.py
green_potential/src/green_potential/core/: __init__.py  filters.py  loader.py
green_potential/src/green_potential/services/: __init__.py  potential.py  spatial.py
green_potential/src/green_potential/utils/: __init__.py  crs.py
lab5/: config.py  main.py
lab5/routes/: config_routes.py  health.py
lab5/services/: runtime_service.py
lab6/app/: dependencies.py  init_dependencies.py  main.py
lab6/app/routes/: config.py
lab6/app/schemas/: app_config.py  runtime_config.py
lab6/app/services/: runtime_config_service.py
urban-green-utils/: README.md  pyproject.toml
urban-green-utils/src/urban_green_utils/: __init__.py  calculator.py
